test/interaction/Issue2487-1.agda
module Issue2487-1 where

postulate get-out-of-jail : {A : Set} -> A
